--- a/templates/history.html
+++ b/templates/history.html
@@ -9,7 +9,7 @@
 {% block nav_history %}active{% endblock %}
 
 {% block content %}
-      <div class="col-md-6 table-responsive float-sm-none float-md-right">
+      <div class="col-md-5 table-responsive float-sm-none float-md-right">
         <table id="spark_table" class="table table-sm table-bordered">
           <tr>
             <th class="sticky-top">Month</th>
@@ -43,10 +43,10 @@
         </table>
       </div>
 
-      <div class="col-md-6 table-responsive float-sm-none float-md-left">
+      <div class="col-md-7 table-responsive float-sm-none float-md-left">
         <table id="history_table" class="table table-sm table-bordered">
           <tr>
-            <th class="history_sort sticky-top sorted-down" id="date_sort">Date</th>
+            <th class="history_sort sticky-top sorted-down min-width" id="date_sort">Date</th>
             <th class="history_sort sticky-top sorted-none" id="opponent_sort">Opponent</th>
             <th class="history_sort sticky-top sorted-none" id="league_sort">League</th>
             <th class="history_sort sticky-top sorted-none" id="our_points_sort">Our Points</th>
