--- a/templates/base.html
+++ b/templates/base.html
@@ -119,6 +119,8 @@
           <div class="col-auto">
             <input class="btn btn-primary" type="submit" name="submit" value="Refresh">
             <input type="hidden" name="player_id" value="{{t.player.id}}">
+            <input class="btn btn-light btn-sm" type="button" id="zoom_reset" value="Reset Zoom">
+            <input class="btn btn-light btn-sm" type="button" id="zoom_out" value="Zoom Out">
           </div>
         </div>
       </form>
