--- a/templates/scoreboard.html
+++ b/templates/scoreboard.html
@@ -9,11 +9,13 @@
 {% block nav_home %}active{% endblock %}
 
 {% block content %}
+    </div>
+    <div class="col scoreboard">
       <table id="summary_table" class="table table-sm table-bordered">
         <tr>
           <th class="header-right" colspan="5">Date</th>
           {% for war in t.wars %}
-          <td class="sticky-top min-width {{war.winClass()}} {{war.trackedClass()}}">
+          <td class="sticky-top-1 min-width {{war.winClass()}} {{war.trackedClass()}}">
             {% if current_user.officer %}
             <a href="{{url_for('war_editor', war_id=war.id)}}">{{war.date}}</a>
             {% else %}
@@ -105,10 +107,10 @@
 
         <tr>
           <th class="summary_sort sticky-top-left sorted-up" id="player_sort">Player</th>
-          <th class="summary_sort sticky-top sorted-none" id="tracked_sort">Tracked</th>
-          <th class="summary_sort sticky-top sorted-none" id="untracked_sort">Untracked</th>
-          <th class="summary_sort sticky-top sorted-none" id="prime_sort">Prime</th>
-          <th class="summary_sort sticky-top sorted-none" id="total_sort">Total</th>
+          <th class="summary_sort sticky-top-1 sorted-none" id="tracked_sort">Tracked</th>
+          <th class="summary_sort sticky-top-1 sorted-none" id="untracked_sort">Untracked</th>
+          <th class="summary_sort sticky-top-1 sorted-none" id="prime_sort">Prime</th>
+          <th class="summary_sort sticky-top-1 sorted-none" id="total_sort">Total</th>
         </tr>
 
         {% for player in t.players %}
@@ -120,10 +122,10 @@
             {{player.name}}
             {% endif %}
           </td>
-          <td>{{player.trackedAvg}}</td>
-          <td>{{player.untrackedAvg}}</td>
-          <td>{{player.primeAvg}}</td>
-          <td>{{player.totalAvg}}</td>
+          <td class="light">{{player.trackedAvg}}</td>
+          <td class="light">{{player.untrackedAvg}}</td>
+          <td class="light">{{player.primeAvg}}</td>
+          <td class="light">{{player.totalAvg}}</td>
           {% for war in t.wars %}
           {% set score = player.scoresRange[war.id].score %}
           {% set noAttempt = player.scoresRange[war.id].no_attempts %}
