--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="form-group row col-sm-5 col-md-3">
-          <div id="playersAuto" class="autocomplete" data-autocomplete='{{t.players|tojson}}'>
+          <div id="playersAuto" class="autocomplete" data-autocomplete='{{t.playersList|tojson}}'>
             {{ form.name(class_='form-control',
                          placeholder=form.name.label.text,
                          autocomplete='off') }}
