--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% if config['GTAG'] %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{config['GTAG']}}"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', {{config['GTAG']}});
+    </script>
+    {% endif %}
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.7, shrink-to-fit=no">
 
@@ -51,7 +61,10 @@
       <div class="navbar-collapse">
         <ul class="navbar-nav ml-auto">
           {% if current_user.is_authenticated %}
-           <li class="nav-item {% block nav_logout %}{% endblock %}">
+          <li class="nav-item {% block nav_help %}{% endblock %}">
+            <a class="nav-link" data-toggle="modal" data-target="#help" href="#">?</a>
+          </li>
+          <li class="nav-item {% block nav_logout %}{% endblock %}">
             <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
           </li>
           {% endif %}
@@ -134,6 +147,75 @@
       </form>
       {% endblock %}
       {% block content %}{% endblock %}
+    </div>
+    <div class="modal fade" id="help" tabindex="-1" role="dialog" aria-labelledby="help" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="helpTitle">TFEW Scores Help</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <dl class="row">
+              <dt class="col-sm-3">
+                Date Ranges
+              </dt>
+              <dt class="col-sm-9">
+                Scoreboard date range defaults to 3 weeks.  All pages default to entire range in the database.  Note that long date ranges (more than approximately 6 weeks) on the Scoreboard may take a long time to load, or not load at all.
+              </dt>
+            </dl>
+
+            <dl class="row">
+              <dt class="col-sm-3">
+                Active Only
+              </dt>
+              <dt class="col-sm-9">
+                Uncheck "Active Only" to view players who are no longer in the alliance, particularly when looking at past date ranges.
+              </dt>
+            </dl>
+
+            <dl class="row">
+              <dt class="col-sm-3">
+                Tracked Only
+              </dt>
+              <dt class="col-sm-9">
+                Check "Tracked Only" to only view tracked wars.
+              </dt>
+            </dl>
+
+            <dl class="row">
+              <dt class="col-sm-3">
+                Color Legend
+              </dt>
+              <dt class="col-sm-9">
+                <table class="table table-sm center">
+                  <tr>
+                    <td class="win">Win</td>
+                    <td class="loss">Loss</td>
+                    <td class="noAttempt">No attempt</td>
+                    <td class="attemptsLeft">Did not complete attempts</td>
+                    <td class="excused">Excused</td>
+                  </tr>
+                </table>
+              </dt>
+            </dl>
+
+            <dl class="row">
+              <dt class="col-sm-3">
+                Other Help
+              </dt>
+              <dt class="col-sm-9">
+                Contact olevelo for general site help, issues or suggestions.  Contact Sentinel for score questions/corrections.
+              </dt>
+            </dl>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
