--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', {{config['GTAG']}});
+      gtag('config', '{{config['GTAG']}}');
     </script>
     {% endif %}
 
@@ -15,11 +15,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.7, shrink-to-fit=no">
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 
     <script type="text/javascript" src="{{url_for('static', filename='jquery.serialize-object.min.js')}}"></script>
 
@@ -108,10 +110,14 @@
           {% endif %}
 
           <div class="col-auto">
-            <div id="opponentsAuto" class="autocomplete" data-autocomplete='{{t.opponentsList|tojson}}'>
-              <label for="opponent" class="update-label">Opponent</label>
-              <input class="form-control" type="text" name="opponent" value="{{t.opponentName}}" autocomplete="off">
-            </div>
+            <label for="opponent" class="update-label">Opponent</label>
+            <select class="selectpicker" name="opponent_id" data-style="custom-multiselect" data-live-search="true" data-actions-box="true" multiple>
+              {% for opponent in t.opponents %}
+              <option value="{{opponent.id}}"
+              {% if opponent.id in t.opp_ids %} selected {% endif %}>{{opponent.name}}
+              </option>
+              {% endfor %}
+            </select>
           </div>
 
           <div class="col-auto">
