Added Cybertron columns.  Made averages collapsable on Scoreboard.

--- a/templates/player.html
+++ b/templates/player.html
@@ -23,6 +23,7 @@
             <th>Tracked</th>
             <th>Untracked</th>
             <th>Prime</th>
+            <th>Cybertron</th>
             <th>All</th>
           </tr>
 
@@ -31,6 +32,7 @@
             <th>{{t.player.trackedAvg}}</th>
             <th>{{t.player.untrackedAvg}}</th>
             <th>{{t.player.primeAvg}}</th>
+            <th>{{t.player.cyberAvg}}</th>
             <th>{{t.player.allAvg}}</th>
           </tr>
           <tr>
@@ -43,6 +45,9 @@
             </th>
             <th>
               <input class="form-control player-check" type="checkbox" name="prime_table" checked>
+            </th>
+            <th>
+              <input class="form-control player-check" type="checkbox" name="cyber_table" checked>
             </th>
             <th>
               <input class="form-control player-check" type="checkbox" name="all_table" checked>
@@ -58,6 +63,9 @@
             </th>
             <th>
               <input class="form-control player-check" type="checkbox" name="prime_chart">
+            </th>
+            <th>
+              <input class="form-control player-check" type="checkbox" name="cyber_chart">
             </th>
             <th>
               <input class="form-control player-check" type="checkbox" name="all_chart" checked>
